# MET-Detection

./: .gitignore  MET-data-stracture  MET-structure.txt  README.md  cnn-work-combined.py  cnn-work-dice.py  cnn-work-iou.py  cnn-work-suggested.py  cnn-work.py  cnn.py  knn.py  main.py  project1-documentation.docx  pyproject.toml  requirements_mac.txt  run.sh  transformer.py  unetr.py
.github/workflows/: linter.yaml
MET-detection-transformer.git/: config  packed-refs
MET-detection-transformer.git/info/: refs
MET-detection-transformer.git/objects/info/: commit-graph  packs
MET-detection-transformer.git/objects/pack/: pack-91d3091d9d3b00ce801b9db23682060cd9d18b08.bitmap  pack-91d3091d9d3b00ce801b9db23682060cd9d18b08.idx  pack-91d3091d9d3b00ce801b9db23682060cd9d18b08.pack
SlicerDICOMDatabase/: ctkDICOM.sql  ctkDICOMTagCache.sql
UNETR/: unetr.py
backend/app/api/: __init__.py  main.py  routes.py
backend/app/controllers/: segmentation_controller.py  training_controller.py  user_controller.py
backend/config/: config.yaml  db_config.yaml
backend/data/: datasets.py
backend/models/: __init__.py  metrics.py  model_utils.py  vit_segmentation.py
backend/scripts/: evaluate.py  inference.py  train.py
backend/tests/: test_api.py  test_services.py  test_utils.py
scripts/: image_proccessing.py
tf-env/: pyvenv.cfg
toturial/: check.py  custom_datagen.py  preprocess_mask.py  simple_3d_unet.py  train-legacy.py  train.py
toturial_unetr/: custom_datagen.py  custom_transforms.py  data_transforms.py  find_edema_masks.py  generate_test_mask.py  list_edema_masks.py  preprocess_t1c.py  simple_3d_unet.py  train.py  train_t1c_unetr.py  unetr.py  unter_model.py  unzip.py  validate.py  view_mask.py  view_mask_slice.py
unetr/: display_nifti.py  mask_validator.py  unetr.py  unetr_t1c.py
(+44 files in other folders)
